// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker should render component with accessibility label 1`] = `
<Picker
  accessibilityLabel="Label for this picker"
  mode="dialog"
/>
`;

exports[`Picker should render the Android native component 1`] = `
<Picker
  mode="dialog"
/>
`;

exports[`Picker should render the iOS native component 1`] = `
<Picker
  mode="dialog"
/>
`;
